src/test/ui/parser/diff-markers/enum-2.stderr
error: encountered diff marker
  --> $DIR/enum-2.rs:3:1
   |
LL | <<<<<<< HEAD
   | ^^^^^^^ start
LL |         x: u8,
LL | =======
   | ^^^^^^^ middle
LL |         x: i8,
LL | >>>>>>> branch
   | ^^^^^^^ end

error: aborting due to previous error

